# nirapod-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  nirapod-audit.toml.example  package.json  skills-lock.json  tsconfig.base.json
.cargo/: config.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  reusable-audit.yml
apps/cli/: package.json
apps/cli/src/: index.tsx
apps/cli/src/commands/: audit.tsx  explain.ts  home.tsx  rules.ts
apps/cli/src/components/: DiagnosticItem.tsx  Header.tsx  ProgressBar.tsx  Summary.tsx
apps/cli/src/output/: agent.ts  markdown.ts  report.ts  sarif.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: audit.rs  explain.rs  mod.rs  rules.rs
crates/cli/src/print/: diagnostic.rs  mod.rs  progress.rs  summary.rs
crates/cli/tests/: phase_three.rs  phase_two.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  context.rs  diagnostic.rs  lib.rs  types.rs
crates/core/src/parser/: mod.rs
crates/core/src/parser/queries/: calls.scm  enums.scm  structs.scm
crates/core/src/passes/: ast_pass.rs  lex_pass.rs  mod.rs
crates/core/src/passes/ast_pass/: declarations.rs  file_header.rs  grouping.rs  helpers.rs  mod.rs  tests.rs  types.rs
crates/core/src/passes/crypto_pass/: api.rs  helpers.rs  misuse.rs  mod.rs  platform.rs  tests.rs
crates/core/src/passes/lex_pass/: helpers.rs  license.rs  mod.rs  style.rs  tests.rs
crates/core/src/passes/memory_pass/: checks.rs  helpers.rs  mod.rs  tests.rs
crates/core/src/passes/nasa_pass/: control_flow.rs  helpers.rs  mod.rs  scope.rs  structure.rs  tests.rs
crates/core/src/passes/style_pass/: checks.rs  helpers.rs  mod.rs  tests.rs
crates/core/src/pipeline/: mod.rs  pass.rs
crates/core/src/rules/: crypto.rs  doxygen.rs  license.rs  memory.rs  mod.rs  nasa.rs  refs.rs  style.rs
crates/core/src/rules/doxygen/: declarations.rs  file_header.rs  functions.rs  grouping.rs  mod.rs
crates/core/src/types/: audit.rs  base.rs  config.rs  file.rs  mod.rs
docs/: PLAN.md  RULES.md
scripts/: commitlint.sh  generate-rules-doc.ts  install-global.sh
tests/: pipeline.test.ts
tests/fixtures/compliant/: good-header.h
tests/violations/: NRP-CRYPTO-violations.h  NRP-DOX-001-no-file-header.h  NRP-LIC-001-no-spdx.h  NRP-MEM-violations.h  NRP-NASA-violations.h  NRP-STYLE-001-banned-words.h
