# SPDX-License-Identifier: APACHE-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Contributors

[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nirapod Contributors"]
license = "Apache-2.0"
repository = "https://github.com/nirapod/nirapod-audit"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "color"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
streaming-iterator = "0.1.9"
toml = "0.8.23"
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
