# SPDX-License-Identifier: APACHE-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Contributors

[package]
name = "nirapod-audit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core analysis types and workspace scaffolding for nirapod-audit."

[dependencies]
serde.workspace = true
toml.workspace = true
