# SPDX-License-Identifier: APACHE-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Contributors

[package]
name = "nirapod-audit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core analysis types and workspace scaffolding for nirapod-audit."

[dependencies]
globset.workspace = true
serde.workspace = true
streaming-iterator.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
walkdir.workspace = true
